Apply suggestions from code review
Co-authored-by: Steffen Larsen <steffen.larsen@intel.com>
Co-authored-by: GarveyJoe <joseph.garvey@intel.com>

--- a/sycl/doc/extensions/experimental/sycl_ext_intel_fpga_task_sequence.asciidoc
+++ b/sycl/doc/extensions/experimental/sycl_ext_intel_fpga_task_sequence.asciidoc
@@ -1,4 +1,4 @@
-= SYCL task_sequence
+= sycl_ext_intel_fpga_task_sequence
 :source-highlighter: coderay
 :coderay-linenums-mode: table
 
@@ -104,7 +104,7 @@ public:
 
 ----
 
-`task_sequence` is a class template, parameterized by an auto reference to a +Callable+ `f`. The +Callable+ `f` defines the asynchronous task to be associated with the `task_sequence`, and requiring an auto reference ensures that each `f` be statically resolvable at compile time.  Static resolvability by the compiler is desirable when compiling for spatial architectures as it can enable the generation of more efficient hardware. Furthermore, the partial specialization `typename ReturnT, typename ... ArgsT, ReturnT(&f) (ArgsT...)` ensures that the return type `ReturnT` of `f` and the argument types `typename ... ArgsT` of `f` are resolvable and fixed for each definition of `task_sequence`. 
+`task_sequence` is a class template, parameterized by an `auto` reference to a +Callable+ `f`. The +Callable+ `f` defines the asynchronous task to be associated with the `task_sequence`, and requiring an auto reference ensures that each `f` be statically resolvable at compile time.  Static resolvability by the compiler is desirable when compiling for spatial architectures as it can enable the generation of more efficient hardware. Furthermore, the partial specialization `typename ReturnT, typename ... ArgsT, ReturnT(&f) (ArgsT...)` ensures that the return type `ReturnT` of `f` and the argument types `typename ... ArgsT` of `f` are resolvable and fixed for each definition of `task_sequence`. 
 
 The `task_sequence` interface consists of two methods, `async` and `get`. The `async` method asynchronously invokes `f`, and stores the return value into a FIFO queue upon completion of `f`.  The `async` function call is non-blocking in that it returns before the asynchronous `f` invocation completes executing, and potentially before `f` even begins executing (return from the `async` provides no implicit information on the execution status of `f`). The `get` method retrieves the oldest result from this logical FIFO queue, and blocks (waits) until a result is available if none are available immediately upon the call to `get`. Both methods may only be invoked on the device on which a `task_sequence` object has been instantiated. Calling `async` or `get` on a different device results in undefined behavior.
 
@@ -159,9 +159,9 @@ Implicitly invokes `get` on all outstanding invocations launched through `async`
 
 To allow compilers targeting spatial compute architectures to efficiently reuse hardware, `task_sequence` objects must not have their lifetime extended beyond the scope in which they are declared, and it is undefined behavior if lifetime is otherwise extended. Both move and copy constructors for `task_sequence` are therefore deleted. Additionally, `task_sequence` objects should retire all outstanding `async` invocations before exiting scope - this is performed by the `task_sequence` destructor unless the `balanced` property was specified in which case it is the programmer's responsibility to ensure that `get` has been called for all invocations launched using `async`, before the lifetime of the `task_sequence` object ends.
 
-In this example implementation, a count of outstanding `async` invocations is kept by incrementing a private counter upon each `async`, and decrementing upon each `get`. The destructor calls `get` on all `outstanding` `async` invocations remaining, ensuring that no `async` invocations execute beyond the object's lifetime. 
+In this example implementation below, a count of outstanding `async` invocations is kept by incrementing a private counter upon each `async`, and decrementing upon each `get`. The destructor calls `get` on all `outstanding` `async` invocations remaining, ensuring that no `async` invocations execute beyond the object's lifetime. 
 
-Although retiring outstanding `async` s in the destructor is necessary to ensure that `async` s do not outlive their `task_sequence`, it is expected that many common coding patterns will guarantee that the number of `async` and `get` calls match (are balanced) before a `task_sequence` object is destroyed, meaning that a simple destructor will be sufficient in these cases. To provide more information to the compiler and to relax the requirement for `async` to be invoked implicitly in the `task_sequence` destructor, the property `balanced` may be specified on a `task_sequence` object, which guarantees that a user will not allow a destructor on that `task_sequence` object to be called when there are outstanding `async` invocations that have not been balanced by a matching `get` call. In the presence of this property, potentially expensive hardware implementing the destructor may be elided. It is undefined behavior to specify the `balanced` property on `task_sequence` and then to allow the `task_sequence` object to be destroyed while there are any `async` invocations for which `get` has not been called.
+Although retiring outstanding `async` s in the destructor is necessary to ensure that `async` s do not outlive their `task_sequence`, it is expected that many common coding patterns will guarantee that the number of `async` and `get` calls match (are balanced) before a `task_sequence` object is destroyed, meaning that a simple destructor will be sufficient in these cases. To provide more information to the compiler and to relax the requirement for `get` to be invoked implicitly in the `task_sequence` destructor, the property `balanced` may be specified on a `task_sequence` object, which guarantees that a user will not allow a destructor on that `task_sequence` object to be called when there are outstanding `async` invocations that have not been balanced by a matching `get` call. In the presence of this property, potentially expensive hardware implementing the destructor may be elided. It is undefined behavior to specify the `balanced` property on `task_sequence` and then to allow the `task_sequence` object to be destroyed while there are any `async` invocations for which `get` has not been called.
 
 == `task_sequence` Properties
 
